--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSection": {
+    "Key": "",
+    "Issuer": "",
+    "Audience": ""
   }
 }
