--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "demoblogapp-b2h0d9bngkeub4hp.westus2-01.azurewebsites.net",
+      "applicationUrl": "https://localhost:7041;http://localhost:5109",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
       }
